[gd_scene load_steps=6 format=2]

[ext_resource path="res://Materials/EditorCursorYAxis.tres" type="Material" id=1]
[ext_resource path="res://Materials/EditorCursorXAxis.tres" type="Material" id=2]
[ext_resource path="res://Materials/EditorCursorZAxis.tres" type="Material" id=3]
[ext_resource path="res://SceneComponents/ObjectTransformCursor.gd" type="Script" id=4]

[sub_resource type="SphereShape" id=1]
radius = 0.2

[node name="ObjectTransformCursor" type="Spatial"]
script = ExtResource( 4 )

[node name="YCoordinateStem" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.4 )
radius = 0.01
height = 0.8
material = ExtResource( 1 )

[node name="XCoordinateStem" type="CSGCylinder" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.4, 0, 0 )
radius = 0.01
height = 0.8
material = ExtResource( 2 )

[node name="ZCoordinateStem" type="CSGCylinder" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.4, 0 )
radius = 0.01
height = 0.8
material = ExtResource( 3 )

[node name="YCoordinateMoveArrow" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.9 )
radius = 0.04
height = 0.2
cone = true
material = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="XCoordinateMoveArrow" type="CSGCylinder" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.9, 0, 0 )
radius = 0.04
height = 0.2
cone = true
material = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="ZCoordinateMoveArrow" type="CSGCylinder" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.9, 0 )
radius = 0.04
height = 0.2
cone = true
material = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="XCoordinateScaleHandle" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.85, 0, 0 )
width = 0.1
height = 0.1
depth = 0.1
material = ExtResource( 2 )

[node name="YCoordinateScaleHandle" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.85 )
width = 0.1
height = 0.1
depth = 0.1
material = ExtResource( 1 )

[node name="ZCoordinateScaleHandle" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0 )
width = 0.1
height = 0.1
depth = 0.1
material = ExtResource( 3 )

[node name="XAxisRotateRing" type="CSGTorus" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
inner_radius = 0.46
outer_radius = 0.5
sides = 32
material = ExtResource( 2 )

[node name="YAxisRotateRing" type="CSGTorus" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
inner_radius = 0.46
outer_radius = 0.5
sides = 32
material = ExtResource( 1 )

[node name="ZAxisRotateRing" type="CSGTorus" parent="."]
inner_radius = 0.46
outer_radius = 0.5
sides = 32
material = ExtResource( 3 )

[node name="XMoveScaleHandleArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="XMoveScaleHandleArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, 0 )
shape = SubResource( 1 )

[node name="YMoveScaleHandleArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="YMoveScaleHandleArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.8 )
shape = SubResource( 1 )

[node name="ZMoveScaleHandleArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="ZMoveScaleHandleArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )
shape = SubResource( 1 )
